--- a/src/components/datepicker_v2.css
+++ b/src/components/datepicker_v2.css
@@ -17,7 +17,6 @@ p {
 	font-size: 16px;
 	position: relative;
 	display: inline-block;
-	/* border: 1px solid lightcoral; */
 }
 
 .date-input-field {
@@ -32,13 +31,13 @@ label.date-input-wrapper {
 	position: relative;
 	display: flex;
 	background-color: transparent;
+	cursor: text;
 }
 
 span.input-label {
 	font-size: 13px;
 	position: absolute;
 	left: 2px;
-	/* top: 2px; */
 	transition: all 0.3s;
 	color: rgba(255, 255, 255, 0.4);
 	pointer-events: none;
@@ -46,7 +45,6 @@ span.input-label {
 
 span.input-label.is-focused {
 	transform: translate(-6px, -16px) scale(0.84);
-	color: lightcoral;
 }
 
 div.date-input-outline {
@@ -83,8 +81,9 @@ div.date-input-outline::before {
 }
 
 div.date-input-outline.is-focused {
-	background-color: lightcoral !important;
-	height: 2px !important;
+	/* background-color: var(--primary-color) !important;
+	height: 2px !important; */
+	height: 2px;
 }
 div.date-input-outline.is-focused::after,
 div.date-input-outline.is-focused::before {
@@ -120,7 +119,7 @@ button {
 	border-radius: 50%;
 	height: 32px;
 	width: 32px;
-	
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -139,7 +138,6 @@ button.input-icon {
 div.calendar-cell button:focus,
 div.calendar-btn-group button:focus-visible {
 	background: rgba(255, 255, 255, 0.1);
-	
 }
 
 button.input-icon:hover,
@@ -164,17 +162,13 @@ div.calendar-popup {
 	background-color: #3c3b46;
 	border: 1px solid rgba(255, 255, 255, 0.2);
 	position: fixed;
-	
-	/* position: absolute; */
-	/* top: calc(50% + 50px); */
-	/* transform: translateY(-16px); */
-	
+
 	z-index: 1000;
 	opacity: 0;
 	margin-top: -16px;
-	
-	transition: .6s;
-	
+
+	transition: 0.3s;
+
 	/* animation: name duration timing-function delay iteration-count direction fill-mode; */
 	/* animation: calendar-show 1s forwards; */
 	/* transform: translate(-20px); */
@@ -183,7 +177,6 @@ div.calendar-popup.left {
 	opacity: 1;
 	/* left: 0; */
 	/* transform: translate(0px); */
-
 }
 div.calendar-popup.right {
 	opacity: 1;
@@ -196,7 +189,6 @@ header.calendar-header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 0.5rem;
-
 }
 header.calendar-header h3 {
 	font-size: 16px;
@@ -219,7 +211,6 @@ div.calendar-grid {
 .weekday-cell {
 	/* border: 1px solid; */
 	height: 24px;
-
 }
 
 .calendar-cell {
@@ -231,20 +222,19 @@ div.calendar-grid {
 	justify-content: center;
 	align-items: center;
 	/* padding: 0.5rem; */
-	color:rgba(255, 255, 255, 0.6);
+	color: rgba(255, 255, 255, 0.6);
 	cursor: pointer;
-
 }
 
 .calendar-cell.current-month-cell {
-	color: #fff
+	color: #fff;
 }
 .calendar-cell.selected-date {
-	background-color: lightcoral;
+	/* background-color: var(--primary-color); */
 }
 
 .date-picker-overlay {
-	background-color: green;
+	/* background-color: green; */
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -278,12 +268,11 @@ div.calendar-grid {
 
 @keyframes calendar-show {
 	0% {
-		transform: scale(.6);
+		transform: scale(0.6);
 		/* height: 0; */
 	}
 	100% {
 		transform: scale(1);
 		/* height: 100%; */
-
 	}
 }
