--- a/src/components/style.css
+++ b/src/components/style.css
@@ -33,6 +33,7 @@ p {
 	border-top-left-radius: 0.35rem;
 	border-top-right-radius: 0.35rem;
 }
+/* .date-input-field: */
 
 label.date-input-wrapper {
 	position: relative;
@@ -81,22 +82,7 @@ div.date-input-outline::before {
 	left: 0;
 }
 
-.date-input-field:hover > div.date-input-outline {
-	height: 2px;
-	transition: 0.2s;
-}
 
-div.date-input-outline.is-focused {
-	height: 2px;
-}
-div.date-input-outline.is-focused::after,
-div.date-input-outline.is-focused::before {
-	animation: underline-enter 0.2s ease-in forwards;
-}
-div.date-input-outline:not(.is-focused)::after,
-div.date-input-outline:not(.is-focused)::before {
-	animation: underline-leave 0.2s ease-in forwards;
-}
 
 input#date-input {
 	display: flex;
@@ -139,16 +125,41 @@ button.input-icon {
 	top: -8px;
 }
 
+
+div.date-input-outline.is-focused {
+	height: 2px;
+}
+div.date-input-outline.is-focused::after,
+div.date-input-outline.is-focused::before {
+	animation: underline-enter 0.2s ease-in forwards;
+}
+div.date-input-outline:not(.is-focused)::after,
+div.date-input-outline:not(.is-focused)::before {
+	animation: underline-leave 0.2s ease-in forwards;
+}
+
+.date-input-field:hover > div.date-input-outline {
+	height: 2px;
+	transition: 0.2s;
+}
+
 div.calendar-cell button:focus,
 div .calendar-cell button:hover,
 div.calendar-btn-group button:focus-visible {
 	background: rgba(255, 255, 255, 0.1);
 }
 
-button.input-icon:hover,
-button.input-icon:focus,
+button.input-icon:hover:not(:disabled),
+button.input-icon:focus:not(:disabled),
 div.calendar-btn-group button:hover {
 	background: rgba(255, 255, 255, 0.1);
+}
+
+
+input#date-input:disabled,
+button.input-icon:disabled {
+	cursor: default;
+	color:rgba(255, 255, 255, 0.2)
 }
 
 div.hint-container {
