--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,27 +1,13 @@
-.App {
-	text-align: center;
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
 .datePicker {
 	position: relative;
 	border: 1px solid #fff;
 	/* border-top-left-radius: 4px; */
 	/* border-top-right-radius: 4px; */
-
 }
 
 .inputContainer {
 	display: flex;
 	position: relative;
-
 }
 
 .input {
@@ -76,7 +62,7 @@
 }
 
 .monthSelectChevron {
-	transition: .15s;
+	transition: 0.15s;
 }
 
 .dateCell {
@@ -89,7 +75,7 @@
 	align-items: center;
 	justify-content: center;
 
-	transition: .15s;
+	transition: 0.15s;
 }
 
 .dateCell.weekday {
